--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,24 @@
 h1 {
 	color: #4C5F5C;
 }
+
+.wraper {
+	min-height: 780px;
+	background-color: #f0f3f1;
+	padding-bottom: 58px;
+}
+
+input {
+	margin: 5px 0px 0px 25px;
+	border: 1px #182929 solid;
+	border-radius: 3px;
+	text-align: center;
+	font-width: bold;
+	font-weight: bold;
+	padding: 0px 0px 0px 0px;
+	width: 105px;
+	height: 25px;
+}
 .build_matrix_button, .shape_matrix_button  {
 	display: inline-block;
 	background-color: #182929;
@@ -81,4 +99,49 @@ h1 {
 	background: #f2f2f2;
 	background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
 	background: -moz-linear-gradient(top,  #f2f2f2,  #f0f0f0);
+}
+.footer {
+	display: block;
+	height: auto;
+	margin-top: 8px;
+	background-color: #f0f3f1;
+    border-radius: 31px;
+    border-top-left-radius: 0px; 
+	border-top-right-radius: 0px;
+}
+.info1, .info2 {
+    padding-left: 20px;
+}
+.info3 {
+	text-align: right;
+    padding-right: 30px;
+}
+.footer p {
+    margin-bottom: -12px;
+}
+.footer p:last-child {
+	margin-bottom: 0;
+}
+.footer span {
+	color: rgb(76, 95, 92);
+	font-style: italic;
+	font-weight: bold;
+	font-size: 14px;
+}
+.footer .github-logo {
+	width: 31px;
+}
+.footer .github-logo:hover {
+	-webkit-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
+}
+.footer .ulsu-logo {
+	width: 90px;
+    height: 90px;
+    opacity: .3;
+}
+.footer .ulsu-logo:hover{
+	opacity: 1;
 }
